# ekom-orakel-3

./: .gitignore  AGENTS.md  CLAUDE.md  QUERY_LOG.md  README.md  historie.md  main.py  oppsummer_rapporter.sh  pyproject.toml  run_analysis.py
.claude/commands/: ekom.md  kontroller.md  listhist.md  loggpush.md  markedsandel.md  ny.md  oppdater.md  sammenlign.md
docs/: EKOM.md  TOOLS.md
docs/v1/: CLAUDE.md  CORRECTIONS.md  DESIGNMAL.md
model/: ekom.malloy
scripts/: konsolider_dekning_historikk.py  migrate_query_log.py
tests/: test_clarification.py  test_cli.py  test_oracle_guardrails.py
